# circuit

./: .gitignore  .gitmodules  Cargo.toml  README.md
circuit/cppcuit/: .gitignore  CMakeLists.txt  example.cpp
circuit/cppcuit/book_fair_example/: book_fair.cc  book_fair.hh
circuit/cppcuit/common_signals/: basic_arithmetic.hh
circuit/cppcuit/config/: circuit.json  streams.json
circuit/cppcuit/example/: CMakeLists.txt
circuit/cppcuit/example/trade_pressure/: CMakeLists.txt  tick_aggregator.hh  trade_pressure.cc  trade_pressure.hh
circuit/cppcuit/generated_tests/: CMakeLists.txt
circuit/cppcuit/include/: CMakeLists.txt  optional_reference.hh  type_info.hh  validity_marker.hh
circuit/cppcuit/include/alloc/: vec_list_alloc.hh
circuit/cppcuit/include/cppcuit/: CMakeLists.txt  array_input.hh  circuit.hh  optional_reference.hh  output_handle.hh  overload.h  overload.hh  packed_optional.hh  raw_call.hh  runtime_error.hh  side.hh  signal_requirements.hh
circuit/cppcuit/include/io/: CMakeLists.txt  streamer.hh  zlib_streamer.hh
circuit/cppcuit/include/math/: CMakeLists.txt  fast_exp_32.hh  fast_exp_64.hh  fast_log_64.hh
circuit/cppcuit/include/md_types/: CMakeLists.txt  bbo_message_generated.h  common_generated.h  depth_message_generated.h  md_message_generated.h  single_trade_message_generated.h  trade_message_generated.h
circuit/cppcuit/include/mem/: linear_pool.hh  tagged_ptr.hh
circuit/cppcuit/include/replay/: CMakeLists.txt  collator.hh  inplace_queue.hh  md_inputs.hh  md_replayer.hh  md_source.hh  sampler.hh  writer.hh
circuit/cppcuit/include/signals/: CMakeLists.txt  basic_arithmetic.hh  basic_operators.hh  book_types.hh  bookbuilder.hh  constant.hh  parameter.hh  select.hh  sum_of.hh
circuit/cppcuit/include/signals/aggregate/: ephemeral_sum_of.hh
circuit/cppcuit/include/signals/book_pressure/: book_aggregator.hh  book_impulse_tracker.hh  book_updater.hh  linear_impulse.hh  sided_book_impulse_tracker.hh
circuit/cppcuit/include/signals/decay/: decay_source.hh  ewma.hh  exp_decay_source.hh  running_sum.hh
circuit/cppcuit/include/signals/market_data/: bbo.hh
circuit/cppcuit/include/signals/multi_stream_book/: level_event.hh  level_tracker.hh
circuit/cppcuit/include/signals/multi_stream_book/rs/multi_stream_book/: event_generated_book.rs  events.rs  (+2 more)
circuit/cppcuit/include/signals/sampled/: sampled_mean.hh  sampled_min_max.hh  sampled_sum.hh
circuit/cppcuit/include/signals/sampling/: bucket_sampler.hh
circuit/cppcuit/include/signals/trade_pressure/: decaying_sum.hh  tick_aggregator.hh  tick_detector.hh
circuit/cppcuit/include/time/: timer_heap.hh
circuit/cppcuit/include/timer/: CMakeLists.txt  timer_handle.hh  timer_queue.hh
circuit/cppcuit/math/: CMakeLists.txt  fast_exp_64.cc  fast_exp_64.hh
circuit/cppcuit/random/: decimal_simd_parse.cc  fast_exp.cc  fast_exp_64.cc
circuit/cppcuit/random/fast_tick_bookbuilder/: CMakeLists.txt
circuit/cppcuit/signal_calc/: CMakeLists.txt
circuit/cppcuit/signal_calc/config/: streams.json
circuit/cppcuit/signal_calc/include/book_pressure/: book_impulse_tracker.hh
circuit/cppcuit/signal_calc/include/trade_pressure/: tick_aggregator.hh
circuit/cppcuit/signal_calc/src/: CMakeLists.txt
circuit/cppcuit/signal_calc/src/book_pressure/: book_impulse_tracker.cc
circuit/cppcuit/signal_calc/src/trade_pressure/: CMakeLists.txt  decaying_sum.cc  tick_aggregator.cc  tick_detector.cc
circuit/cppcuit/src/: CMakeLists.txt
circuit/cppcuit/src/cppcuit/: CMakeLists.txt  runtime_error.cc
circuit/cppcuit/src/io/: CMakeLists.txt  streamer.cc  zlib_streamer.cc
circuit/cppcuit/src/math/: CMakeLists.txt  fast_exp_64.cc  fast_log_64.cc
circuit/cppcuit/src/mem/: CMakeLists.txt  linear_pool.cc
circuit/cppcuit/src/random/: fast_exp_32.hh
circuit/cppcuit/src/random/fast_tick_bookbuilder/: bookbuilder.cc  bookbuilder.hh
circuit/cppcuit/src/replay/: CMakeLists.txt  md_replayer.cc  md_source.cc  sampler.cc  writer.cc
circuit/cppcuit/src/signals/: CMakeLists.txt  parameter.cc  signals.cc
circuit/cppcuit/src/signals/book_pressure/: CMakeLists.txt  book_aggregator.cc  book_impulse_tracker.cc  book_updater.cc  linear_impulse.cc  sided_book_impulse_tracker.cc
circuit/cppcuit/src/signals/decay/: CMakeLists.txt  decay_source.cc
circuit/cppcuit/src/signals/sampling/: CMakeLists.txt  bucket_sampler.cc
circuit/cppcuit/src/signals/trade_pressure/: CMakeLists.txt  decaying_sum.cc  tick_aggregator.cc  tick_detector.cc
circuit/cppcuit/src/timer/: CMakeLists.txt  timer_queue.cc
circuit/cppcuit/src/trade_pressure/: CMakeLists.txt  tick_aggregator.cc
circuit/cppcuit/tests/: CMakeLists.txt
circuit/cppcuit/tests/io/: CMakeLists.txt  test_streamer.cc
circuit/cppcuit/tests/math/: CMakeLists.txt  test_fast_exp.cc  test_fast_ln.cc
circuit/cppcuit/tests/replay/: CMakeLists.txt  test_collator.cc
circuit/cppcuit/tests/signals/: CMakeLists.txt  test_bookbuilder.cc
circuit/cppcuit/tests/signals/book_pressure/: CMakeLists.txt  linear_impulse.cc  test_linear_impulse.cc
circuit/cppcuit/tests/signals/multi_stream_book/: CMakeLists.txt  test_level_tracker.cc
circuit/cppcuit/trade_pressure/: tick_aggregator.cc
circuit/signal_calc/: CMakeLists.txt
circuit/signal_calc/include/book_pressure/: book_impulse_tracker.hh  linear_impulse.hh
circuit/signal_calc/include/trade_pressure/: decaying_sum.hh  tick_aggregator.hh
circuit/signal_calc/src/book_pressure/: CMakeLists.txt  book_impulse_tracker.cc
circuit/signal_calc/src/book_pressure/model/: .gitignore  document.fdb_latexmk  document.fls  document.tex
circuit/signal_calc/src/trade_pressure/: tick_aggregator.cc
circuit/trade_pressure_signal/: .gitignore  CMakeLists.txt  cppcuit
circuit/trade_pressure_signal/include/: decaying_sum.hh  tick_aggregator.hh
circuit/trade_pressure_signal/src/: CMakeLists.txt  decaying_sum.cc  tick_aggregator.cc  tick_detector.cc
simd_decimal/: .gitignore  CMakeLists.txt
simd_decimal/include/: decimal_simd_parse.hh
simd_decimal/src/: CMakeLists.txt  decimal_simd_parse.cc
simd_decimal/test/: CMakeLists.txt  test.cc
(+144 files in other folders)
